[gd_scene load_steps=5 format=3 uid="uid://cf0agp7e6jojg"]

[ext_resource type="Script" uid="uid://qa2otv5ddra4" path="res://Scripts/level_select.gd" id="1_noqe0"]
[ext_resource type="FontFile" uid="uid://bqdpte3m2v88p" path="res://Assets/Higher Jump.ttf" id="2_06msq"]

[sub_resource type="LabelSettings" id="LabelSettings_81p0k"]
font = ExtResource("2_06msq")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_noqe0"]
font = ExtResource("2_06msq")
font_size = 10

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_noqe0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="Label" type="Label" parent="."]
offset_left = 457.0
offset_top = 46.0
offset_right = 812.0
offset_bottom = 143.0
text = "SELECT BUG"
label_settings = SubResource("LabelSettings_81p0k")
horizontal_alignment = 1

[node name="BugGrid" type="GridContainer" parent="."]
offset_left = 150.0
offset_top = 150.0
offset_right = 190.0
offset_bottom = 190.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="WalletPanel" type="Panel" parent="."]
offset_left = 950.0
offset_top = 20.0
offset_right = 1250.0
offset_bottom = 100.0

[node name="WalletStatus" type="Label" parent="WalletPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 211.0
offset_bottom = 38.0
text = "No Wallet Connected"
label_settings = SubResource("LabelSettings_noqe0")
horizontal_alignment = 1

[node name="WalletButton" type="Button" parent="WalletPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 229.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("2_06msq")
theme_override_font_sizes/font_size = 14
text = "CONNECT WALLET"
